--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,18 +1,20 @@
 plugins {
     id 'com.android.application'
     id 'kotlin-android'
+    id 'kotlin-android-extensions'
 }
 
 android {
-    compileSdkVersion 30
-    buildToolsVersion "30.0.2"
+    compileSdkVersion 31
+    buildToolsVersion "30.0.3"
 
     defaultConfig {
         applicationId "com.aram_dev.mapbox"
         minSdkVersion 21
-        targetSdkVersion 30
+        targetSdkVersion 31
         versionCode 1
         versionName "1.0"
+        multiDexEnabled = true
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
@@ -30,6 +32,13 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+
+    buildFeatures {
+        viewBinding = true
+    }
+    kotlinOptions {
+        jvmTarget = "1.8"
+    }
 }
 
 dependencies {
@@ -43,13 +52,32 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
+    implementation "androidx.multidex:multidex:2.0.1"
     implementation "com.google.android.gms:play-services-location:18.0.0"
 
-    implementation 'com.mapbox.mapboxsdk:mapbox-sdk-services:5.6.0'
+    implementation 'com.mapbox.mapboxsdk:mapbox-sdk-services:5.9.0-alpha.1'
+
     implementation 'com.mapbox.mapboxsdk:mapbox-android-plugin-annotation-v9:0.9.0'
+    implementation 'com.mapbox.mapboxsdk:mapbox-android-plugin-localization-v9:0.12.0'
+    implementation 'com.mapbox.mapboxsdk:mapbox-android-plugin-building-v9:0.7.0'
+    implementation 'com.mapbox.mapboxsdk:mapbox-android-plugin-markerview-v9:0.4.0'
+    implementation 'com.mapbox.mapboxsdk:mapbox-android-plugin-offline-v9:0.8.0'
+    implementation 'com.mapbox.mapboxsdk:mapbox-android-plugin-places-v9:0.12.0'
+    implementation 'com.mapbox.mapboxsdk:mapbox-android-plugin-scalebar-v9:0.5.0'
+    implementation 'com.mapbox.mapboxsdk:mapbox-android-plugin-traffic-v7:0.8.0'
+    implementation 'com.mapbox.mapboxsdk:mapbox-android-plugin-cluster-utils:0.4.0'
+    implementation 'com.mapbox.mapboxsdk:mapbox-sdk-turf:5.9.0-alpha.1'
+
+    implementation('com.mapbox.mapboxsdk:mapbox-android-sdk:9.6.2@aar') {
+        transitive = true
+    }
+
+
 //    implementation 'com.mapbox.mapboxsdk:mapbox-android-navigation-ui:0.26.0'
-    implementation 'com.mapbox.mapboxsdk:mapbox-android-navigation-ui:0.27.0-SNAPSHOT'
+//    implementation 'com.mapbox.mapboxsdk:mapbox-android-navigation-ui:0.27.0-SNAPSHOT'
     implementation('com.mapbox.mapboxsdk:mapbox-android-sdk:9.6.2') {
         exclude group: 'group_name', module: 'module_name'
     }
+    /** Timber */
+    implementation "com.jakewharton.timber:timber:5.0.1"
 }
