--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,10 +44,10 @@ android {
 dependencies {
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-    implementation 'androidx.core:core-ktx:1.6.0'
-    implementation 'androidx.appcompat:appcompat:1.3.1'
+    implementation 'androidx.core:core-ktx:1.7.0'
+    implementation 'androidx.appcompat:appcompat:1.4.0'
     implementation 'com.google.android.material:material:1.4.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.0'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.2'
     implementation 'com.squareup.picasso:picasso:2.71828'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
@@ -56,6 +56,35 @@ dependencies {
     implementation "androidx.multidex:multidex:2.0.1"
     implementation "com.google.android.gms:play-services-location:18.0.0"
 
+    /** MapBox v10 */
+    implementation('com.mapbox.maps:android:10.1.0') {
+        // This removes the default HTTP stack bundled with the SDK
+//        exclude (group = "com.mapbox.common", module = "okhttp")
+        exclude group: 'com.mapbox.common', module: 'okhttp'
+    }
+//    compileOnly('com.mapbox.base:annotations:10.1.0')
+    // This includes Mapbox Annotation processor dependency:
+//    kapt('com.mapbox.base:annotations-processor:10.1.0')
+
+    /** MapBox plugin v10 */
+    implementation('com.mapbox.plugin:maps-locationcomponent:10.1.0')
+
+    implementation('com.mapbox.plugin:maps-gestures:10.1.0')
+    implementation('com.mapbox.plugin:maps-annotation:10.1.0')
+//    implementation('com.mapbox.plugin:maps-localization:10.0.0')
+//    implementation('com.mapbox.plugin:maps-style.layers:10.0.0')
+//    implementation('com.mapbox.plugin:maps-places:10.0.0')
+//    implementation('com.mapbox.plugin:maps-traffic:10.0.0')
+//    implementation('com.mapbox.plugin:maps-cluster:10.0.0')
+
+    implementation('com.mapbox.plugin:maps-scalebar:10.1.0')
+
+
+
+    // Mapbox PRE-v10
+    implementation('com.mapbox.mapboxsdk:mapbox-android-sdk:9.6.2') {
+        exclude group: 'com.mapbox.android.telemetry', module: 'provider'
+    }
     implementation 'com.mapbox.mapboxsdk:mapbox-sdk-services:5.9.0-alpha.1'
 
     implementation 'com.mapbox.mapboxsdk:mapbox-android-plugin-annotation-v9:0.9.0'
@@ -69,16 +98,9 @@ dependencies {
     implementation 'com.mapbox.mapboxsdk:mapbox-android-plugin-cluster-utils:0.4.0'
     implementation 'com.mapbox.mapboxsdk:mapbox-sdk-turf:5.9.0-alpha.1'
 
-    implementation('com.mapbox.mapboxsdk:mapbox-android-sdk:9.6.2@aar') {
-        transitive = true
-    }
+    implementation ("org.jetbrains.kotlinx:kotlinx-coroutines-core:1.5.1")
+    implementation ("org.jetbrains.kotlinx:kotlinx-coroutines-android:1.5.0")
 
-
-//    implementation 'com.mapbox.mapboxsdk:mapbox-android-navigation-ui:0.26.0'
-//    implementation 'com.mapbox.mapboxsdk:mapbox-android-navigation-ui:0.27.0-SNAPSHOT'
-    implementation('com.mapbox.mapboxsdk:mapbox-android-sdk:9.6.2') {
-        exclude group: 'group_name', module: 'module_name'
-    }
     /** Timber */
     implementation "com.jakewharton.timber:timber:5.0.1"
 }
